fix comment